# rrdeep

./: Cargo.toml  LICENSE  Makefile  README  README.md  a.txt  b.txt  gen_files.sh
src/: cli.rs  main.rs  rrdeep.rs
tests/: test_rrdeep_cli.rs
